--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,11 @@ form {
 }
 
 .not-visible {
-    display: none;
+    opacity: 0;
+}
+
+.transtion-screen {
+    transition: opacity 1.5s ease-in;
 }
 
 .instagram-form {
